@@ -12,6 +12,8 @@ Post-v3.3.0
      * Link status changes are now handled via interrupt mode if the DPDK
        driver supports it.  It is possible to revert to polling mode by setting
        per interface 'options:dpdk-lsc-interrupt' to 'false'.
+   - Python:
+     * Add custom transaction support to the Idl via add_op().
 
 
 v3.3.0 - 16 Feb 2024
